--- a/src/network_visualization/site/style.css
+++ b/src/network_visualization/site/style.css
@@ -1,26 +1,58 @@
-body {
+* {
     margin: 0px;
     padding: 0px;
 
+    box-sizing: border-box;
+}
+
+body {
     overflow: hidden;
     height: 100vh;
 
     background-color: #333;
+
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-#content,
-#content svg {
+#content {
     width: 100vw;
     height: 100vh;
+
+    display: grid;
+
 }
 
+.svg-wrapper {
+    position: relative;
+
+    width: 100%;
+    height: 100%;
+}
+
+.svg-label {
+    position: absolute;
+
+    left: 50%;
+    transform: translateX(-50%);
+
+    background-color: #999;
+    font-size: 20px;
+    padding: 5px;
+
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+svg {
+    border: 2px solid #999;
+    width: 100%;
+    height: 100%;
+}
 
 line {
 
     stroke-width: 8px;
 }
-
-
 
 rect {
     fill: #ddd;
